# apis-rdf-devops-new

./: .gitmodules  Dockerfile  manage.py  pyproject.toml  start.sh  wsgi.py
.github/workflows/: commitizen.yml  deploy.yml
apis_ontology/: requirements.txt
apis_ontology/settings/: server_settings.py
default_project/: asgi.py  settings.py  urls.py  wsgi.py
