[tool.poetry]
name = "some-apis-instance"
version = "0.1.0"
description = "Generic APIS project for auto devops"
authors = ["Birger Schacht <birger.schacht@oeaw.ac.at>"]
license = "MIT"
packages = [{include = "apis_ontology"}]


[tool.poetry.dependencies]
python = ">=3.11,<3.12"
django = ">=4.1,<4.2"
whitenoise = "^5.2.0"
sentry-sdk = "*"
dj-database-url = "^0.5.0"
gunicorn = "^20.0.4"
django-allow-cidr = "^0.3.1"
mysqlclient = "^2.0.3"
django-extensions = "^3.1.3"
django-csp = "^3.7"
pyzotero = "^1.5.5"
apis-core = { git = "https://github.com/acdh-oeaw/apis-core-rdf.git", branch = "main"  }
webpage = { git = "https://github.com/acdh-oeaw/apis-webpage.git", branch = "main" }

[tool.poetry.group.dev.dependencies]
commitizen = "^3.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
